Messages: fixed response from server and messages alignment

--- a/src/AppBundle/Resources/public/scss/messages.scss
+++ b/src/AppBundle/Resources/public/scss/messages.scss
@@ -81,7 +81,8 @@
       }
       .own-message,
       .own-company {
-        margin-left: 0;
+        margin-right: 0;
+        margin-left: auto;
       }
     }
     .message-input{
